--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       h1 {
         color: #f0f0f0;
-        font-size: 50px;
+        font-size: 60px;
       }
       h3 {
         color: #be3144;
@@ -47,18 +47,19 @@
         margin-top: 420px;
       }
       #projects {
-        display: grid;
-        grid-column-gap: 50px;
-        grid-row-gap: 50px;
-        width: 100%;
-        left: 0;
-        right: 0;
+        text-align: center;
         height: 500px;
         background-color: #45567d;
       }
       .project-image {
-        width: 400px;
+        width: 100%;
         height: 350px;
+      }
+      #projects-grid {
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+        width: 100%;
       }
     </style>
   </head>
@@ -69,58 +70,80 @@
     </section>
     <section id="projects"></section>
     <h2>These are some of my projects</h2>
-    <div>
-      <ul>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
-              alt="project"
-          /></a>
-        </li>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
-              alt="project"
-          /></a>
-        </li>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
-              alt="project"
-          /></a>
-        </li>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
-              alt="project"
-          /></a>
-        </li>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
-              alt="project"
-            />
-          </a>
-        </li>
-        <li class="project-tile">
-          <a href="https://codepen.io/freeCodeCamp/full/KzXQgy" target="_blank"
-            ><img
-              class="project-image"
-              src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
-              alt="project"
-          /></a>
-        </li>
-      </ul>
+    <div id="projects-grid">
+      <a
+        href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+          alt="project"
+        /><span class="code"><</span>
+        <p class="project-title">Tribute Page</p>
+        <span class="code">></span>
+      </a>
+      <a
+        href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
+          alt="project"
+        /><span class="code"><</span>
+        <p class="project-title">Random Quote Machine</p>
+        <span class="code">></span></a
+      >
+      <a
+        href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
+          alt="project"
+        /><span class="code"><</span>
+        <p class="project-title">JavaScript Calculator</p>
+        <span class="code">></span></a
+      >
+      <a
+        href="https://codepen.io/freeCodeCamp/full/mVEJag"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
+          alt="project"
+        /><span class="code"><</span>
+        <p class="project-title">Map Data Across the Globe</p>
+        <span class="code">></span></a
+      >
+      <a
+        href="https://codepen.io/freeCodeCamp/full/wGqEga"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
+          alt="project"
+        />
+        <span class="code"><</span>
+        <p class="project-title">Wikipedia Viewer</p>
+        <span class="code">></span>
+      </a>
+      <a
+        href="https://codepen.io/freeCodeCamp/full/KzXQgy"
+        target="_blank"
+        class="project project-tile"
+        ><img
+          class="project-image"
+          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
+          alt="project"
+        /><span class="code"><</span>
+        <p class="project-title">Tic Tac Toe Game</p>
+        <span class="code">></span></a
+      >
     </div>
     <nav id="navbar">
       <ul>
