--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
         background-color: #181719;
         overflow-x: hidden;
       }
-      #navbar {
+      nav {
         background-color: #be3144;
         left: 0;
         right: 0;
         width: 100%;
         height: 75px;
         font-size: 24px;
-        position: absolute;
+        position: fixed;
         top: 0;
+        z-index: 10;
       }
       #navbar ul {
         list-style-type: none;
@@ -36,19 +37,22 @@
       }
       h3 {
         color: #be3144;
-        font-size: 30px;
+        font-size: 36px;
         font-style: italic;
+        font-weight: lighter;
+        margin: 5px;
       }
       #welcome-section {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 420px;
+        width: 100%;
+        height: 100vh;
+        line-height: 3px;
       }
       #projects {
         text-align: center;
-        height: 500px;
         background-color: #45567d;
       }
       .project-image {
@@ -57,94 +61,35 @@
       }
       #projects-grid {
         display: grid;
-        grid-gap: 20px;
+        grid-gap: 30px;
         grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
         width: 100%;
+      }
+      #projects-header {
+        color: #f0f0f0;
+        font-size: 40px;
+        border-bottom: 2px solid;
+        margin: 0 auto 6rem auto;
+      }
+      .project-title {
+        color: #f0f0f0;
+        font-size: 21px;
+        padding: 10px;
+        margin: 0;
+      }
+      .project {
+        background-color: #181719;
+        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        border-radius: 2px;
+        text-decoration: none;
+      }
+      .code {
+        color: #181719;
+        transition: orange 0.3;
       }
     </style>
   </head>
   <body>
-    <section id="welcome-section">
-      <h1>Hey I am Mimic</h1>
-      <h3>a web developer</h3>
-    </section>
-    <section id="projects"></section>
-    <h2>These are some of my projects</h2>
-    <div id="projects-grid">
-      <a
-        href="https://codepen.io/freeCodeCamp/full/zNqgVx"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
-          alt="project"
-        /><span class="code"><</span>
-        <p class="project-title">Tribute Page</p>
-        <span class="code">></span>
-      </a>
-      <a
-        href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
-          alt="project"
-        /><span class="code"><</span>
-        <p class="project-title">Random Quote Machine</p>
-        <span class="code">></span></a
-      >
-      <a
-        href="https://codepen.io/freeCodeCamp/full/wgGVVX"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
-          alt="project"
-        /><span class="code"><</span>
-        <p class="project-title">JavaScript Calculator</p>
-        <span class="code">></span></a
-      >
-      <a
-        href="https://codepen.io/freeCodeCamp/full/mVEJag"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
-          alt="project"
-        /><span class="code"><</span>
-        <p class="project-title">Map Data Across the Globe</p>
-        <span class="code">></span></a
-      >
-      <a
-        href="https://codepen.io/freeCodeCamp/full/wGqEga"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
-          alt="project"
-        />
-        <span class="code"><</span>
-        <p class="project-title">Wikipedia Viewer</p>
-        <span class="code">></span>
-      </a>
-      <a
-        href="https://codepen.io/freeCodeCamp/full/KzXQgy"
-        target="_blank"
-        class="project project-tile"
-        ><img
-          class="project-image"
-          src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
-          alt="project"
-        /><span class="code"><</span>
-        <p class="project-title">Tic Tac Toe Game</p>
-        <span class="code">></span></a
-      >
-    </div>
     <nav id="navbar">
       <ul>
         <li><a href="#welcome-section">About</a></li>
@@ -152,6 +97,106 @@
         <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
+    <section id="welcome-section">
+      <h1>Hey I am Mimic</h1>
+      <h3>a web developer</h3>
+    </section>
+    <section id="projects">
+      <h2 id="projects-header">These are some of my projects</h2>
+      <div id="projects-grid">
+        <a
+          href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code"><</span>
+            Tribute Page
+            <span class="code">/></span>
+          </p>
+        </a>
+        <a
+          href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code"><</span>Random Quote Machine
+            <span class="code">/></span>
+          </p>
+        </a>
+        <a
+          href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code"><</span>JavaScript Calculator<span class="code"
+              >/></span
+            >
+          </p>
+        </a>
+        <a
+          href="https://codepen.io/freeCodeCamp/full/mVEJag"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code"><</span>Map Data Across the Globe<span
+              class="code"
+              >/></span
+            >
+          </p>
+        </a>
+        <a
+          href="https://codepen.io/freeCodeCamp/full/wGqEga"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
+            alt="project"
+          />
+
+          <p class="project-title">
+            <span class="code"><</span>Wikipedia Viewer<span class="code"
+              >/></span
+            >
+          </p>
+        </a>
+        <a
+          href="https://codepen.io/freeCodeCamp/full/KzXQgy"
+          target="_blank"
+          class="project project-tile"
+          ><img
+            class="project-image"
+            src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
+            alt="project"
+          />
+          <p class="project-title">
+            <span class="code"><</span>Tic Tac Toe Game<span class="code"
+              >/></span
+            >
+          </p>
+        </a>
+      </div>
+    </section>
     <section id="Contact">
       <h1>Let's work together...</h1>
       <p>How do you take your coffee?</p>
