--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     <title>Personal Portfolio</title>
     <style>
       body {
-        background-color: #181719;
         overflow-x: hidden;
+        position: relative;
+        width: 100%;
+        left: 0;
+        right: 0;
+        height: 100vh;
+        padding: 0;
+        margin: 0;
       }
       nav {
         background-color: #be3144;
         left: 0;
-        right: 0;
         width: 100%;
-        height: 75px;
         font-size: 24px;
         position: fixed;
         top: 0;
-        z-index: 10;
+        z-index: 1;
       }
       #navbar ul {
         list-style-type: none;
@@ -44,6 +48,7 @@
         margin: 5px;
       }
       #welcome-section {
+        background-color: #181719;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -90,6 +95,13 @@
         transition: color 0.3;
         padding-bottom: 70px;
       }
+      span.code {
+        color: #181719;
+        transition: color 0.3s ease-out;
+      }
+      .project:hover .code {
+        color: #ff7f50;
+      }
       #show-all {
         color: #f0f0f0;
         font-size: 30px;
@@ -103,6 +115,7 @@
         background-color: #be3144;
       }
       #Contact {
+        background-color: #181719;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -138,6 +151,8 @@
         padding: 30px;
       }
       footer {
+        background-color: #181719;
+        width: 100%;
         color: #f0f0f0;
         font-size: 20px;
         display: flex;
