--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <style>
       body {
         overflow-x: hidden;
-        position: relative;
         width: 100%;
-        left: 0;
-        right: 0;
-        height: 100vh;
         padding: 0;
         margin: 0;
       }
@@ -162,6 +158,168 @@
       }
       footer p {
         margin-right: 50px;
+      }
+      @media (max-width: 767px) {
+        body {
+          overflow-x: hidden;
+          overflow-y: scroll;
+          width: 100%;
+          padding: 0;
+          margin: 0;
+        }
+        nav {
+          background-color: #be3144;
+          left: 0;
+          width: 100%;
+          font-size: 22px;
+          position: fixed;
+          top: 0;
+          z-index: 1;
+        }
+        #navbar ul {
+          list-style-type: none;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+        }
+        #navbar ul li a {
+          text-decoration: none;
+          color: white;
+          margin: 20px;
+        }
+        h1 {
+          color: #f0f0f0;
+          font-size: 45px;
+          text-align: center;
+        }
+        h3 {
+          color: #be3144;
+          font-size: 33px;
+          font-style: italic;
+          font-weight: lighter;
+          margin: 5px;
+        }
+        #welcome-section {
+          background-color: #181719;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          height: 100vh;
+          line-height: 3px;
+        }
+        #projects {
+          text-align: center;
+          background-color: #45567d;
+          height: 415vh;
+        }
+        .project-image {
+          padding: 0;
+          width: 100%;
+          height: 300px;
+        }
+        #projects-header {
+          max-width: 330px;
+          color: #f0f0f0;
+          font-size: 34px;
+          border-bottom: 2px solid;
+          padding-bottom: 1px;
+        }
+        .project-title {
+          color: #f0f0f0;
+          font-size: 18px;
+          margin: 0;
+        }
+        .project {
+          background-color: #181719;
+          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+          border-radius: 2px;
+          text-decoration: none;
+          margin-bottom: 0;
+        }
+        #projects-grid {
+          display: grid;
+          grid-column-gap: 30px;
+          grid-row-gap: 60px;
+          grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+          width: 100%;
+          transition: color 0.3;
+        }
+        span.code {
+          color: #181719;
+          transition: color 0.3s ease-out;
+        }
+        .project:hover .code {
+          color: #ff7f50;
+        }
+        #show-all {
+          color: #f0f0f0;
+          font-size: 22px;
+          text-decoration: none;
+          padding: 5px 16px;
+          background-color: #181719;
+          border-radius: 2px;
+          box-shadow: 1px 1px 1px 1px #181719;
+        }
+        #show-all:hover {
+          background-color: #be3144;
+        }
+        #Contact {
+          background-color: #181719;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          border-bottom: 4px solid #be3144;
+          width: 100%;
+          height: 80vh;
+          padding: 0;
+          margin: 0;
+        }
+        #contact-header {
+          text-align: center;
+          line-height: 5px;
+        }
+        #contact-header h1 {
+          font-size: 35px;
+        }
+        #contact-content {
+          color: #f0f0f0;
+          font-size: 20px;
+          text-align: center;
+          font-weight: lighter;
+          font-style: italic;
+        }
+        #social-media {
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+        }
+        #social-media ul {
+          list-style: none;
+          display: flex;
+          flex-wrap: wrap;
+          padding: 0 2rem;
+        }
+        #social-media ul li a {
+          text-decoration: none;
+          font-size: 25px;
+          color: #f0f0f0;
+          text-align: center;
+        }
+        footer {
+          background-color: #181719;
+          width: 100%;
+          color: #f0f0f0;
+          font-size: 20px;
+          display: flex;
+          flex-direction: column;
+          padding: 0 20px 0 20px;
+          text-align: center;
+        }
       }
     </style>
   </head>
@@ -328,7 +486,7 @@
         **This is just a fake portfolio. All the projects and contact details
         given are not real.
       </p>
-      <span>© Created for freeCodeCamp </span>
+      <p>© Created for freeCodeCamp</p>
     </footer>
   </body>
 </html>
