--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
         text-align: center;
         background-color: #45567d;
         height: 200vh;
-      }
-      .project-image {
-        width: 100%;
-        height: 350px;
+        padding-bottom: 250px;
       }
       #projects-header {
         padding-top: 80px;
@@ -75,6 +72,10 @@
         font-size: 21px;
         padding: 10px;
         margin: 0;
+      }
+      .project-image {
+        width: 100%;
+        height: 350px;
       }
       .project {
         background-color: #181719;
@@ -123,7 +124,10 @@
         margin: 0;
       }
       #contact-header {
+        display: flex;
+        flex-wrap: wrap;
         line-height: 4px;
+        flex-direction: column;
       }
       #contact-content {
         color: #f0f0f0;
@@ -210,41 +214,36 @@
           line-height: 3px;
         }
         #projects {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
           text-align: center;
           background-color: #45567d;
-          height: 415vh;
-        }
-        .project-image {
-          padding: 0;
-          width: 100%;
-          height: 300px;
+          height: 370vh;
+          padding-bottom: 100px;
         }
         #projects-header {
           max-width: 330px;
           color: #f0f0f0;
-          font-size: 34px;
+          font-size: 30px;
           border-bottom: 2px solid;
-          padding-bottom: 1px;
+        }
+        .project-image {
+          width: 100%;
+          height: 300px;
         }
         .project-title {
           color: #f0f0f0;
           font-size: 18px;
-          margin: 0;
-        }
-        .project {
-          background-color: #181719;
-          box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-          border-radius: 2px;
-          text-decoration: none;
-          margin-bottom: 0;
         }
         #projects-grid {
           display: grid;
-          grid-column-gap: 30px;
-          grid-row-gap: 60px;
           grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
           width: 100%;
           transition: color 0.3;
+          padding: 0;
+          margin: 0;
         }
         span.code {
           color: #181719;
@@ -320,6 +319,10 @@
           padding: 0 20px 0 20px;
           text-align: center;
         }
+        /* @media (max-width: 670px) {
+          #projects {
+            height: 410vh;
+        } */
       }
     </style>
   </head>
